tests/machine/x/hs/string_in_operator.error

/workspace/mochi/tests/machine/x/hs/string_in_operator.hs:16:21: error:
    • Couldn't match type ‘Char’ with ‘[Char]’
      Expected: [String]
        Actual: String
    • In the second argument of ‘elem’, namely ‘s’
      In the first argument of ‘print’, namely ‘(elem "cat" s)’
      In a stmt of a 'do' block: print (elem "cat" s)
   |
16 |   print (elem "cat" s)
   |                     ^

/workspace/mochi/tests/machine/x/hs/string_in_operator.hs:17:21: error:
    • Couldn't match type ‘Char’ with ‘[Char]’
      Expected: [String]
        Actual: String
    • In the second argument of ‘elem’, namely ‘s’
      In the first argument of ‘print’, namely ‘(elem "dog" s)’
      In a stmt of a 'do' block: print (elem "dog" s)
   |
17 |   print (elem "dog" s)
   |                     ^


Context around line 16:
   14| main :: IO ()
   15| main = do
   16|   print (elem "cat" s)
   17|   print (elem "dog" s)
   18| 
